# castify

./: .env  Cargo.toml  Dockerfile  LICENSE  README.md
src/: config.rs  main.rs
src/responders/: broadcast_responder.rs  mod.rs  status_responder.rs
src/utils/: get_env_vars.rs  mod.rs  verify_token.rs
src/ws/: handler.rs  types.rs
