[package]
name = "castify"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.4.0", features = ["v4"] }
actix-web = "4.11.0"
actix-ws = "0.3.0"
dotenv = "0.15.0"
futures-util = "0.3.31"
once_cell = "1.21.3"
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
